# hybirt

./: CMakeLists.txt
src/: ampere.hpp  boris.hpp  boundary_condition.hpp  diagnostics.hpp  faraday.hpp  field.hpp  gridlayout.hpp  hybirt.cpp  moments.hpp  ohm.hpp  population.hpp  pusher.hpp  vecfield.hpp
tests/boris/: test_boris.cpp
